# office-rooms-qt-coursework

./: .gitignore  CMakeLists.txt
data/: sample_rooms.ordb
docs/: Doxyfile  mainpage.dox
include/core/: room.h
include/dialogs/: aboutdialog.h  chartdialog.h  roomdialog.h
include/documents/: roomdocument.h
include/models/: RoomTableModel.cpp  roomsortfilterproxymodel.h  roomtablemodel.h
include/services/: printservice.h  settingsmanager.h  translationmanager.h
include/storage/: roomfilestorage.h
include/widgets/: roomdocumentwidget.h
resources/: resources.qrc
src/: main.cpp
src/model/: RoomSortFilterProxyModel.cpp  RoomSortFilterProxyModel.h  RoomTableModel.cpp  RoomTableModel.h
src/services/: PrintService.cpp  PrintService.h  SettingsManager.cpp  SettingsManager.h  TranslationManager.cpp  TranslationManager.h
src/ui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ChartDialog.cpp  ChartDialog.h  ChartDialog.ui  DocumentWidget.cpp  DocumentWidget.h  DocumentWidget.ui  DocumentWidgetOrdb.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  RoomEditDialog.cpp  RoomEditDialog.h  RoomEditDialog.ui
translations/: office_rooms_de.ts  office_rooms_ru.ts
